fix the contrast ratio (#9631)

--- a/src/sql/workbench/browser/modal/media/modal.css
+++ b/src/sql/workbench/browser/modal/media/modal.css
@@ -180,7 +180,7 @@
 
 .vs .modal.flyout-dialog .dialog-message.info,
 .vs-dark .modal.flyout-dialog .dialog-message.info {
-	background-color:#0078D7 !important;
+	background-color:#096CC9 !important;
 	color:#FFFFFF !important;
 }
 
